# SALEcVtsReader

./: CMakeLists.txt  InputParser.c  LICENSE  README.md  Utility.c  Utility.h  VtsReader.c  VtsReader.h  VtsTag.c  copy-to-remote.sh  main.c
2d/: txt2vts.c
3d/: citcoms_related.c  citcoms_related.cpp  citcoms_related.h  citcoms_set_dump.c  ejecta_3d.c  ejecta_analysis.c  ejecta_analysis.h  ejecta_txt2vtp.c
plot/: main.py  profile_plot.py
src/: AVLTree.c  AVLTree.h  InputParser.c  InputParser.h  SliceFilter.c  SliceFilter.h  Statistic.c  ToCitcoms2d.c  Tracer.c  TracerReader.c  TracerReader.h  Utility.c  Utility.h  Utility2d.c  Utility2d.h  VtkWriter.c  VtkWriter.h  VtpReader.c  VtpReader.h  VtpTag.c  VtpTracer.c  VtpTracer.h  Vts2dProfile.c  VtsReader.c  VtsReader.h  VtsTag.c  main.c  remnant.c  test.c
